--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 *{
     margin: 0%;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
     height: 100vh;
-
+    background-color: rebeccapurple;   
 }
 
 .topo{
@@ -30,66 +31,81 @@ body{
     color: #FFFFFF;
 }
 
-
-.container{
-    background-color: rebeccapurple;   
+.container {        /* MEUS JA CRIADOS*/
     width: 100%;
-    height: auto;
-    display: flex;
     align-items:flex-start;
     flex-wrap: wrap;
+}
 
+
+img{
+    width: 100%;
+    height: 100%;
 }
 
 .cardVazio{
-    box-sizing: border-box;
     width: 340px;
     height: 181px;
-    margin: 0 auto;
     background: #b44545;
     border: 1px dashed #D5D5D5;
     border-radius: 5px;
-    margin-top: 30px;
     color: #d5d5d591;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    margin-left:40px ;
+    margin-top: 20px;
+
 }
-.x{
-    width: 80%;
-}
-.semconteudo{
+.semConteudo{
     text-align:center;
+    width: 160px;
 }
 .nenhumQuizz{
     width: 200px;
     font-size: 17px;
 }
+.criarConteudo{
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 .criar{
     background-color:transparent;
     width: 151px;
+    color: wheat;
     padding: 7px;
     border: 1px dashed #EC362D;
     border-radius: 50px;
     cursor: pointer;
 }
 
-.opcoes{
-    background-color: green;
-    margin: 0 auto;
-    width: 80%;
-    height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
-    /* flex-direction: column; */
+.none{      /*apagar se ja criado algum quiz*/
+    display: none ;
 }
 
+
+.meusquizes{
+    width: 1200px;
+}
+.meusquizes,
+.lista{
+   
+   background-color: gray;
+   margin: 0% auto;
+   display: flex;
+   list-style: none;
+   flex-wrap: wrap;
+   align-items: center;
+   justify-content: start;
+ }
+
 .todos{
-    /* position: absolute; */
     background-color: rgb(172, 153, 153);
     height: 23px;
-    width: 80%;
+    width: 90%;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -100,4 +116,66 @@ body{
     text-align: center;
     margin:0 auto ;
     margin-top: 20px;
+}
+
+.lista{
+    width: 95%;
+}
+.opcoes{
+    background-color: red;
+    width: 90%;
+    margin: 0 auto;
+}
+
+@media (min-width : 1200px ){
+    .opcoes,
+    .lista,
+    .todos,
+    .meusquizes{
+        width: 1200px;
+    }
+}
+
+
+@media (max-width : 1230px ){
+    .opcoes,
+    .lista,
+    .todos{
+        width: 90%;
+        justify-content: space-around;
+    }
+    .meusquizes{
+        justify-content: center;
+        width: 90%;
+    }
+    .criarConteudo{
+        margin: 0 ;
+    }
+    .cardVazio{
+        margin-left: 0px;
+    }
+
+}
+
+@media (max-width : 900px ){
+    .opcoes,
+    .lista,
+    .todos{
+        width: 90%;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    
+    .meusquizes{
+        justify-content: center;
+    }
+
+    .lista{
+        width: 100%;
+    }
+    .cardVazio{
+        width: 100%;
+        margin-left: 0px;
+    }
+
 }
