--- a/css/responder.css
+++ b/css/responder.css
@@ -1,14 +1,21 @@
 .quizz-respostas{
     width: 100%;
     height: 100%;
-    background-color: blue;
+    background-color: rgb(213, 213, 219);
     position: fixed;
     top:0;
     overflow-y: scroll;
+    font-weight: bold;
 }
 
+img{
+    left: 0;
+    top:0;
+    position: absolute;
+  
+}
 .escondido{
-    /* display: none; */
+    display: none;
 }
 
 
@@ -31,10 +38,24 @@
 }
 
 .pergunta{
-    background-color: red;
-    height: 130px;
+    background-color: rgba(255, 0, 0, 0.226);
+    position: relative;
+    height: 172px;
     width: 40%;
     margin-top: 22px;
+    cursor: pointer;
+}
+.tituloPg{
+    background-color: black;
+    text-align: center;
+    color: wheat;
+    position: absolute;
+    bottom:0 ;
+    z-index: 1;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .lista-de-perguntas{
@@ -43,7 +64,6 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
-    background-color: green;
     height: 86.7%;
 }
 
