--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body{
 img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .cardVazio{
@@ -83,7 +84,7 @@ img{
     cursor: pointer;
 }
 
-.none{      /*apagar se ja criado algum quiz*/
+.escondido{      /*apagar se ja criado algum quiz*/
     display: none ;
 }
 
@@ -126,6 +127,11 @@ img{
     background-color: red;
     width: 90%;
     margin: 0 auto;
+}
+.imagem-fundo{position: relative;}
+.imagem-body{
+    width: 100%;
+    position: absolute;
 }
 
 @media (min-width : 1200px ){
@@ -180,6 +186,10 @@ img{
     }
 
 }
+.titulodoquizz{
+    z-index: 1;
+}
+
 .titulo{
     position: absolute;
     bottom: 0px;
