--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body{
     height: 100vh;
-    background-color: rebeccapurple;   
+    background-color: #c4bcbc; 
 }
 
 .topo{
@@ -18,6 +18,14 @@ body{
     align-items: center;
     justify-content: center;
 }
+.fixo{
+    position:fixed; 
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    z-index:2;
+    margin-bottom: 130px;    
+}
 
 .tituloTopo{
     position: absolute;
@@ -28,7 +36,7 @@ body{
     font-weight: 700;
     font-size: 37px;
     line-height: 43px;
-    color: #FFFFFF;
+   
 }
 
 .container {        /* MEUS JA CRIADOS*/
@@ -40,16 +48,27 @@ body{
 
 img{
     width: 100%;
-    height: 100%;
+    height: 100%; 
     object-fit: cover;
-   
+   border-radius: 5px;
+}
+.vazio{
+    border: 1px dashed #D5D5D5;
+    margin-top: 30px;
 }
 
+.sombra{
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 56.58%, #0c0c0cfa 81%);
+    width: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+    height: 100%;
+}
 .cardVazio{
     width: 340px;
     height: 181px;
     background: #b44545;
-    border: 1px dashed #D5D5D5;
     border-radius: 5px;
     color: #D5D5D5;
     margin-left:40px ;
@@ -57,6 +76,9 @@ img{
     margin-top: 20px;
     position: relative;
 
+}
+.escondido{
+    display:none;
 }
 .semConteudo{
     text-align:center;
@@ -97,7 +119,6 @@ img{
 .meusquizes,
 .lista{
    
-   background-color: gray;
    margin: 0% auto;
    display: flex;
    list-style: none;
@@ -107,11 +128,12 @@ img{
  }
 
 .todos{
-    background-color: rgb(172, 153, 153);
     height: 23px;
+ 
     width: 90%;
     font-family: 'Roboto';
     font-style: normal;
+    padding: 0 30px;
     font-weight: 700;
     font-size: 20px;
     line-height: 23px;
@@ -126,7 +148,6 @@ img{
     width: 95%;
 }
 .opcoes{
-    background-color: red;
     width: 90%;
     margin: 0 auto;
 }
@@ -194,10 +215,11 @@ img{
 
 .titulo{
     position: absolute;
-    bottom: 0px;
-   background-color: rgba(255, 0, 0, 0.123);
-   word-wrap:break-word;
+    bottom: 10px;
+    left: 20px;
+    word-wrap:break-word;
     width: 100%;
     font-size: 16px;
+    z-index: 1;
 }
 
