--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ body{
 
 .topo{
     width: 100%;
-    height: 69px;
+    min-height: 69px;
+    padding:10px;
     background: #EC362D;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
@@ -59,7 +60,7 @@ body{
     margin:103px auto;
 }
 
-img{
+.cardVazio img, .resposta img{
     width: 100%;
     height: 100%; 
     object-fit: cover;
@@ -171,7 +172,10 @@ img{
 .imagem-fundo{position: relative;}
 .imagem-body{
     width: 100%;
+    height: 100%;
     position: absolute;
+    object-fit: cover;
+    opacity: 22%;
 }
 
 @media (min-width : 1200px ){
@@ -212,7 +216,12 @@ img{
         flex-direction: column;
         justify-content: space-around;
     }
-    
+    .img-result{
+        flex-direction: column;
+    }
+    .img-result img {
+        width: 100%;
+    }
     .meusquizes{
         justify-content: center;
     }
@@ -231,6 +240,7 @@ img{
     font-family: "Roboto", sans-serif;
     color: #ffffff;
     font-size: 39px;
+      word-wrap:break-word;
     }
 
 
@@ -240,4 +250,43 @@ img{
     
     .false{
         color:red;
+    }
+
+    .texto-topo{
+        max-width:90%;
+        word-break: break-all;
+    }
+
+
+    .resultado{
+        width: 80%;
+        margin:0 auto;
+        background-color: #EC362D;
+        height:500px;
+        flex-direction: column;
+        display :flex;
+    }
+
+    .img-result{
+        height: 100%;
+        width:100%;
+        position:relative;
+        /* background-color: blue; */
+        display :flex;
+        justify-content:end;
+    }
+
+    
+    .img-result img{
+        height: 300px;
+        max-width: 300px;
+        object-fit: cover;
+        height:300px;
+    }
+
+    .img-result div{
+        /* background-color: red; */
+        max-width:47%;
+        padding:20px;
+        font-size:26px;
     }
