--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,6 @@ body{
     object-fit: cover;
 
 }
-.vazio{
-    border: 1px dashed #D5D5D5;
-    margin-top: 30px;
-}
 .imgOpcoes{
     border-radius: 15px;
     position: absolute;
@@ -115,16 +111,24 @@ body{
 .criarConteudo{
     display: flex;
     flex-direction: column;
+    padding: 10px;
+    border: 1px dashed #D5D5D5;
+    margin-top: 30px;
+    color: #D5D5D5;
+    background-color: #b44545;
     width: 95%;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
+    border-radius:15px;
+    padding:40px;
 }
 .criar{
     background-color:transparent;
     width: 151px;
+    cursor:pointer;
     color: wheat;
     padding: 7px;
     border: 1px dashed #EC362D;
@@ -235,6 +239,7 @@ body{
     }
 
 }
+
 .titulodoquizz{
     z-index: 1;
     font-family: "Roboto", sans-serif;
