--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ body{
     height: 100vh;
     background:   #c4bcbc;
 }
-
+.subtitulo{
+        font-family: 'Roboto Condensed', sans-serif;
+}
 .topo{
     width: 100%;
     min-height: 69px;
@@ -20,7 +22,6 @@ body{
     align-items: center;
     justify-content: center;
     text-align :center;
-    font-family: "Roboto", sans-serif;
     color: #ffffff;
     font-size: 23px;
 }
@@ -89,7 +90,7 @@ body{
 .cardVazio{
     width: 340px;
     height: 181px;
-    background: #b44545;
+    background: #a9a9a9b3;
     border-radius: 15px;
     color: #D5D5D5;
     margin-left:40px ;
@@ -116,7 +117,7 @@ body{
     border: 1px dashed #D5D5D5;
     margin-top: 30px;
     color: #D5D5D5;
-    background-color: #b44545;
+    background-color: #a9a9a9b3;
     width: 95%;
     margin: 0 auto;
     display: flex;
