--- a/css/style.css
+++ b/css/style.css
@@ -62,15 +62,19 @@ body{
     margin:103px auto;
 }
 
-.cardVazio img, .resposta img{
+.imgAlternativa{
     width: 100%;
-    height: 100%; 
-    object-fit: cover;
-
+    height: 100%;
 }
 .imgOpcoes{
     border-radius: 15px;
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
     position: absolute;
+}
+.sombra:hover {
+    opacity: 98%;
 }
 .sombra{
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 56.58%, #0c0c0cfa 81%);
@@ -86,7 +90,9 @@ body{
     opacity: 30%;
 }
 
-
+.cardVazio:hover{
+    color: white;
+}
 .cardVazio{
     width: 340px;
     height: 181px;
@@ -245,6 +251,7 @@ body{
     color: #ffffff;
     font-size: 39px;
       word-wrap:break-word;
+      text-align: center;
     }
 
 
@@ -258,7 +265,6 @@ body{
 
     .texto-topo{
         max-width:90%;
-        word-break: break-all;
     }
 
 
